// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`regression snapshot > v1 buildGenerationPlan default mode output is stable 1`] = `
[
  {
    "format": "svg",
    "height": undefined,
    "kind": "passthrough",
    "maskable": undefined,
    "name": "assets/logo.svg",
    "transparent": undefined,
    "type": "logo",
    "variant": "default",
    "width": undefined,
  },
  {
    "format": "png",
    "height": 1024,
    "kind": "raster",
    "maskable": undefined,
    "name": "assets/logo.png",
    "transparent": true,
    "type": "logo",
    "variant": "default",
    "width": 1024,
  },
  {
    "format": "png",
    "height": 16,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/default/favicon-16x16.png",
    "transparent": true,
    "type": "favicon",
    "variant": "default",
    "width": 16,
  },
  {
    "format": "png",
    "height": 32,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/default/favicon-32x32.png",
    "transparent": true,
    "type": "favicon",
    "variant": "default",
    "width": 32,
  },
  {
    "format": "png",
    "height": 48,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/default/favicon-48x48.png",
    "transparent": true,
    "type": "favicon",
    "variant": "default",
    "width": 48,
  },
  {
    "format": "ico",
    "height": undefined,
    "kind": "ico",
    "maskable": undefined,
    "name": "icons/default/favicon.ico",
    "transparent": undefined,
    "type": "favicon",
    "variant": "default",
    "width": undefined,
  },
  {
    "format": "svg",
    "height": undefined,
    "kind": "passthrough",
    "maskable": undefined,
    "name": "icons/default/favicon.svg",
    "transparent": undefined,
    "type": "favicon",
    "variant": "default",
    "width": undefined,
  },
  {
    "format": "png",
    "height": 180,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/default/apple-touch-icon.png",
    "transparent": false,
    "type": "logo",
    "variant": "default",
    "width": 180,
  },
  {
    "format": "png",
    "height": 152,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/default/apple-touch-icon-152x152.png",
    "transparent": false,
    "type": "logo",
    "variant": "default",
    "width": 152,
  },
  {
    "format": "png",
    "height": 120,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/default/apple-touch-icon-120x120.png",
    "transparent": false,
    "type": "logo",
    "variant": "default",
    "width": 120,
  },
  {
    "format": "png",
    "height": 192,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/default/pwa-192x192.png",
    "transparent": true,
    "type": "logo",
    "variant": "default",
    "width": 192,
  },
  {
    "format": "png",
    "height": 192,
    "kind": "raster",
    "maskable": true,
    "name": "icons/default/pwa-maskable-192x192.png",
    "transparent": false,
    "type": "logo",
    "variant": "default",
    "width": 192,
  },
  {
    "format": "png",
    "height": 512,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/default/pwa-512x512.png",
    "transparent": true,
    "type": "logo",
    "variant": "default",
    "width": 512,
  },
  {
    "format": "png",
    "height": 512,
    "kind": "raster",
    "maskable": true,
    "name": "icons/default/pwa-maskable-512x512.png",
    "transparent": false,
    "type": "logo",
    "variant": "default",
    "width": 512,
  },
  {
    "format": "png",
    "height": 630,
    "kind": "raster",
    "maskable": undefined,
    "name": "og-image.png",
    "transparent": false,
    "type": "social",
    "variant": "default",
    "width": 1200,
  },
  {
    "format": "png",
    "height": 600,
    "kind": "raster",
    "maskable": undefined,
    "name": "twitter-image.png",
    "transparent": false,
    "type": "social",
    "variant": "default",
    "width": 1200,
  },
]
`;

exports[`regression snapshot > v1 buildGenerationPlan themed mode output is stable 1`] = `
[
  {
    "format": "svg",
    "height": undefined,
    "kind": "passthrough",
    "maskable": undefined,
    "name": "assets/logo.svg",
    "transparent": undefined,
    "type": "logo",
    "variant": "default",
    "width": undefined,
  },
  {
    "format": "png",
    "height": 1024,
    "kind": "raster",
    "maskable": undefined,
    "name": "assets/logo.png",
    "transparent": true,
    "type": "logo",
    "variant": "default",
    "width": 1024,
  },
  {
    "format": "png",
    "height": 1024,
    "kind": "raster",
    "maskable": undefined,
    "name": "assets/logo-light.png",
    "transparent": true,
    "type": "logo",
    "variant": "light",
    "width": 1024,
  },
  {
    "format": "png",
    "height": 1024,
    "kind": "raster",
    "maskable": undefined,
    "name": "assets/logo-dark.png",
    "transparent": true,
    "type": "logo",
    "variant": "dark",
    "width": 1024,
  },
  {
    "format": "png",
    "height": 16,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/light/favicon-16x16.png",
    "transparent": true,
    "type": "favicon",
    "variant": "light",
    "width": 16,
  },
  {
    "format": "png",
    "height": 32,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/light/favicon-32x32.png",
    "transparent": true,
    "type": "favicon",
    "variant": "light",
    "width": 32,
  },
  {
    "format": "png",
    "height": 48,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/light/favicon-48x48.png",
    "transparent": true,
    "type": "favicon",
    "variant": "light",
    "width": 48,
  },
  {
    "format": "ico",
    "height": undefined,
    "kind": "ico",
    "maskable": undefined,
    "name": "icons/light/favicon.ico",
    "transparent": undefined,
    "type": "favicon",
    "variant": "light",
    "width": undefined,
  },
  {
    "format": "png",
    "height": 180,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/light/apple-touch-icon.png",
    "transparent": false,
    "type": "logo",
    "variant": "light",
    "width": 180,
  },
  {
    "format": "png",
    "height": 152,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/light/apple-touch-icon-152x152.png",
    "transparent": false,
    "type": "logo",
    "variant": "light",
    "width": 152,
  },
  {
    "format": "png",
    "height": 120,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/light/apple-touch-icon-120x120.png",
    "transparent": false,
    "type": "logo",
    "variant": "light",
    "width": 120,
  },
  {
    "format": "png",
    "height": 192,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/light/pwa-192x192.png",
    "transparent": false,
    "type": "logo",
    "variant": "light",
    "width": 192,
  },
  {
    "format": "png",
    "height": 192,
    "kind": "raster",
    "maskable": true,
    "name": "icons/light/pwa-maskable-192x192.png",
    "transparent": false,
    "type": "logo",
    "variant": "light",
    "width": 192,
  },
  {
    "format": "png",
    "height": 512,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/light/pwa-512x512.png",
    "transparent": false,
    "type": "logo",
    "variant": "light",
    "width": 512,
  },
  {
    "format": "png",
    "height": 512,
    "kind": "raster",
    "maskable": true,
    "name": "icons/light/pwa-maskable-512x512.png",
    "transparent": false,
    "type": "logo",
    "variant": "light",
    "width": 512,
  },
  {
    "format": "png",
    "height": 16,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/dark/favicon-16x16.png",
    "transparent": true,
    "type": "favicon",
    "variant": "dark",
    "width": 16,
  },
  {
    "format": "png",
    "height": 32,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/dark/favicon-32x32.png",
    "transparent": true,
    "type": "favicon",
    "variant": "dark",
    "width": 32,
  },
  {
    "format": "png",
    "height": 48,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/dark/favicon-48x48.png",
    "transparent": true,
    "type": "favicon",
    "variant": "dark",
    "width": 48,
  },
  {
    "format": "ico",
    "height": undefined,
    "kind": "ico",
    "maskable": undefined,
    "name": "icons/dark/favicon.ico",
    "transparent": undefined,
    "type": "favicon",
    "variant": "dark",
    "width": undefined,
  },
  {
    "format": "png",
    "height": 180,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/dark/apple-touch-icon.png",
    "transparent": false,
    "type": "logo",
    "variant": "dark",
    "width": 180,
  },
  {
    "format": "png",
    "height": 152,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/dark/apple-touch-icon-152x152.png",
    "transparent": false,
    "type": "logo",
    "variant": "dark",
    "width": 152,
  },
  {
    "format": "png",
    "height": 120,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/dark/apple-touch-icon-120x120.png",
    "transparent": false,
    "type": "logo",
    "variant": "dark",
    "width": 120,
  },
  {
    "format": "png",
    "height": 192,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/dark/pwa-192x192.png",
    "transparent": false,
    "type": "logo",
    "variant": "dark",
    "width": 192,
  },
  {
    "format": "png",
    "height": 192,
    "kind": "raster",
    "maskable": true,
    "name": "icons/dark/pwa-maskable-192x192.png",
    "transparent": false,
    "type": "logo",
    "variant": "dark",
    "width": 192,
  },
  {
    "format": "png",
    "height": 512,
    "kind": "raster",
    "maskable": undefined,
    "name": "icons/dark/pwa-512x512.png",
    "transparent": false,
    "type": "logo",
    "variant": "dark",
    "width": 512,
  },
  {
    "format": "png",
    "height": 512,
    "kind": "raster",
    "maskable": true,
    "name": "icons/dark/pwa-maskable-512x512.png",
    "transparent": false,
    "type": "logo",
    "variant": "dark",
    "width": 512,
  },
]
`;

exports[`regression snapshot > v1 buildOutputMap produces correct entries 1`] = `
[
  {
    "directory": "assets",
    "path": "assets/logo.png",
    "type": "logo",
    "variant": "default",
  },
  {
    "directory": "assets",
    "path": "assets/logo.svg",
    "type": "logo",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/apple-touch-icon-120x120.png",
    "type": "logo",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/apple-touch-icon-152x152.png",
    "type": "logo",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/apple-touch-icon.png",
    "type": "logo",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/favicon-16x16.png",
    "type": "favicon",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/favicon-32x32.png",
    "type": "favicon",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/favicon-48x48.png",
    "type": "favicon",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/favicon.ico",
    "type": "favicon",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/favicon.svg",
    "type": "favicon",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/pwa-192x192.png",
    "type": "logo",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/pwa-512x512.png",
    "type": "logo",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/pwa-maskable-192x192.png",
    "type": "logo",
    "variant": "default",
  },
  {
    "directory": "icons/default",
    "path": "icons/default/pwa-maskable-512x512.png",
    "type": "logo",
    "variant": "default",
  },
  {
    "directory": ".",
    "path": "og-image.png",
    "type": "social",
    "variant": "default",
  },
  {
    "directory": ".",
    "path": "twitter-image.png",
    "type": "social",
    "variant": "default",
  },
]
`;
